<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="francisco.metzger@gmail.com">Francisco Metzger</maintainer>
  <license>MIT</license>

  <depend>raros_interfaces</depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>python-rpi.gpio-pip</depend>
  <depend>python3-adafruit-blinka-pip</depend>
  <depend>python3-opencv</depend>
  <depend>python3-yaml</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
